# MyFirst

assignment 1/: makefile
assignment 1/Imran/: makefile
assignment 1/Imran/include/: Action.h  Customer.h  Dish.h  Restaurant.h  Table.h
assignment 1/Imran/src/: Action.cpp  Customer.cpp  Dish.cpp  Main.cpp  Restaurant.cpp  Table.cpp
assignment 1/muhammad205530942-aya209105519/: .makefile.swp  CMakeLists.txt  makefile
assignment 1/muhammad205530942-aya209105519/include/: Action.h  Session.h  User.h  Watchable.h
assignment 1/muhammad205530942-aya209105519/src/: Action.cpp  Main.cpp  Session.cpp  User.cpp  Watchable.cpp
assignment 2/.metadata/: version.ini
assignment 2/.metadata/.mylyn/.taskListIndex/: segments_1
assignment 2/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
assignment 2/.metadata/.plugins/org.eclipse.jdt.core/: 1269174993.index  externalFilesCache  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
assignment 2/assignment2/: .classpath  deadLock.json  input.json  pom.xml  test2.json
assignment 2/assignment2/.metadata/: version.ini
assignment 3/assignment3/Boost_Echo_Client/: CMakeLists.txt  makefile
assignment 3/assignment3/Boost_Echo_Client/include/: ayaThread.h  connectionHandler.h  mhmmdThread.h  protocol.h
assignment 3/assignment3/Boost_Echo_Client/src/: ayaThread.cpp  connectionHandler.cpp  echoClient.cpp  mhmmdThread.cpp  protocol.cpp
assignment 4/: Activitie.txt  config.txt
assignment 4/209105519_205530942/: action.py  initiate.py  printdb.py
(+108 files in other folders)
